--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -5,8 +5,22 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".AuthActivity"
+        tools:context=".ui.activities.AuthActivity"
+        android:id="@+id/authRootView"
+        android:background="@android:color/white"
         >
+    
+    <ProgressBar
+            android:id="@+id/authLoginProgressBar"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:indeterminate="true"
+            android:visibility="gone"
+            style="?android:attr/progressBarStyleHorizontal"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
 
     <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/authEmailInputLayout"
@@ -18,9 +32,10 @@
             android:layout_marginStart="32dp"
             android:layout_marginEnd="32dp"
             android:layout_marginTop="28dp"
+            app:errorEnabled="true"
             >
 
-        <EditText
+        <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/authEmailInput"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -43,10 +58,10 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginStart="32dp"
             android:layout_marginEnd="32dp"
-            android:layout_marginTop="16dp"
+            app:errorEnabled="true"
             >
 
-        <EditText
+        <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/authPasswordInput"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -62,6 +77,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
+            android:id="@+id/authBtn"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
